--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-body {}
+/* body {} */
 
 .header {
     display: flex;
@@ -41,7 +41,7 @@ a {
     margin: 100px;
 }
 
-.signup{
+.signup {
     background-color: #3882F6;
     padding: 8px 20px;
     border-radius: 10px;
@@ -77,7 +77,7 @@ img {
     margin: 100px;
 }
 
-.info-header{
+.info-header {
     font-size: 36px;
     font-weight: extra-bold;
     color: #1F2937;
@@ -90,7 +90,7 @@ img {
     flex-wrap: wrap;
 }
 
-.card-container{
+.card-container {
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -104,7 +104,26 @@ img {
     margin-bottom: 10px;
 }
 
-.text{
+.text {
     text-align: center;
     max-width: 130px;
+}
+
+.qoute-wrapper {
+    padding: 200px;
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+}
+
+.qoute {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+    margin-bottom: 20px;
+}
+
+.author {
+    font-weight: bold;
+    align-self: flex-end;
 }
